--- a/MediaBrowser.WebDashboard/dashboard-ui/itembynamedetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itembynamedetails.html
@@ -10,7 +10,7 @@
             <div class="libraryViewNav scopedLibraryViewNav">
                 <a href="moviesrecommended.html">${TabSuggestions}</a>
                 <a href="movies.html">${TabMovies}</a>
-                <a href="movietrailers.html">${TabTrailers}</a>
+                <a href="movietrailers.html" class="movieTrailersTab">${TabTrailers}</a>
                 <a href="collections.html?context=movies">${TabCollections}</a>
                 <a href="moviegenres.html" class="ui-btn-active">${TabGenres}</a>
                 <a href="moviepeople.html" class="moviePeopleTab">${TabPeople}</a>
@@ -21,7 +21,7 @@
             <div class="libraryViewNav scopedLibraryViewNav">
                 <a href="moviesrecommended.html">${TabSuggestions}</a>
                 <a href="movies.html">${TabMovies}</a>
-                <a href="movietrailers.html">${TabTrailers}</a>
+                <a href="movietrailers.html" class="movieTrailersTab">${TabTrailers}</a>
                 <a href="collections.html?context=movies">${TabCollections}</a>
                 <a href="moviegenres.html">${TabGenres}</a>
                 <a href="moviepeople.html" class="ui-btn-active moviePeopleTab">${TabPeople}</a>
@@ -32,7 +32,7 @@
             <div class="libraryViewNav scopedLibraryViewNav">
                 <a href="moviesrecommended.html">${TabSuggestions}</a>
                 <a href="movies.html">${TabMovies}</a>
-                <a href="movietrailers.html">${TabTrailers}</a>
+                <a href="movietrailers.html" class="movieTrailersTab">${TabTrailers}</a>
                 <a href="collections.html?context=movies">${TabCollections}</a>
                 <a href="moviegenres.html">${TabGenres}</a>
                 <a href="moviepeople.html" class="moviePeopleTab">${TabPeople}</a>
