--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -33,7 +33,7 @@
             <div class="libraryViewNav scopedLibraryViewNav">
                 <a href="moviesrecommended.html">${TabSuggestions}</a>
                 <a href="movies.html" class="lnkMovies">${TabMovies}</a>
-                <a href="movietrailers.html" class="lnkMovieTrailers">${TabTrailers}</a>
+                <a href="movietrailers.html" class="lnkMovieTrailers movieTrailersTab">${TabTrailers}</a>
                 <a href="collections.html?context=movies" class="lnkCollections">${TabCollections}</a>
                 <a href="moviegenres.html">${TabGenres}</a>
                 <a href="moviepeople.html" class="moviePeopleTab">${TabPeople}</a>
