--- a/MediaBrowser.WebDashboard/dashboard-ui/movies.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movies.html
@@ -9,7 +9,7 @@
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="moviesrecommended.html">${TabSuggestions}</a>
             <a href="#" class="ui-btn-active">${TabMovies}</a>
-            <a href="movietrailers.html">${TabTrailers}</a>
+            <a href="movietrailers.html" class="movieTrailersTab">${TabTrailers}</a>
             <a href="collections.html?context=movies">${TabCollections}</a>
             <a href="moviegenres.html">${TabGenres}</a>
             <a href="moviepeople.html" class="moviePeopleTab">${TabPeople}</a>
