--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceslanguages.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceslanguages.html
@@ -12,78 +12,80 @@
             <a href="#" class="lnkMyProfile">${TabProfile}</a>
             <a href="#" class="lnkWebClientPreferences">${TabAppSettings}</a>
         </div>
+        <div data-role="content">
 
-        <br />
-        <form style="margin: 0 auto;" class="languagePreferencesForm userProfileSettingsForm">
+            <br />
+            <form style="margin: 0 auto;" class="languagePreferencesForm userProfileSettingsForm">
 
 
-            <div class="detailSection">
-                <div class="detailSectionHeader">
-                    ${HeaderLanguagePreferences}
+                <div class="detailSection">
+                    <div class="detailSectionHeader">
+                        ${HeaderLanguagePreferences}
+                    </div>
+                    <div class="detailSectionContent">
+                        <br />
+                        <div>
+                            <label for="selectAudioLanguage">${LabelAudioLanguagePreference}</label>
+                            <select id="selectAudioLanguage" data-mini="true"></select>
+                        </div>
+                        <br />
+                        <div data-role="controlgroup">
+                            <input type="checkbox" id="chkPlayDefaultAudioTrack" />
+                            <label for="chkPlayDefaultAudioTrack">${LabelPlayDefaultAudioTrack}</label>
+                        </div>
+                        <br />
+                        <div>
+                            <label for="selectSubtitleLanguage">${LabelSubtitleLanguagePreference}</label>
+                            <select id="selectSubtitleLanguage" data-mini="true"></select>
+                        </div>
+                        <br />
+                        <div>
+                            <label for="selectSubtitlePlaybackMode">${LabelSubtitlePlaybackMode}</label>
+                            <select id="selectSubtitlePlaybackMode" data-mini="true">
+                                <option value="Default">${OptionDefaultSubtitles}</option>
+                                <option value="OnlyForced">${OptionOnlyForcedSubtitles}</option>
+                                <option value="Always">${OptionAlwaysPlaySubtitles}</option>
+                                <option value="None">${OptionNoSubtitles}</option>
+                            </select>
+                            <div class="fieldDescription subtitlesDefaultHelp subtitlesHelp" style="display: none;">${OptionDefaultSubtitlesHelp}</div>
+                            <div class="fieldDescription subtitlesAlwaysHelp subtitlesHelp" style="display: none;">${OptionAlwaysPlaySubtitlesHelp}</div>
+                            <div class="fieldDescription subtitlesOnlyForcedHelp subtitlesHelp" style="display: none;">${OptionOnlyForcedSubtitlesHelp}</div>
+                            <div class="fieldDescription subtitlesNoneHelp subtitlesHelp" style="display: none;">${OptionNoSubtitlesHelp}</div>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="detailSectionContent">
-                    <br />
-                    <div>
-                        <label for="selectAudioLanguage">${LabelAudioLanguagePreference}</label>
-                        <select id="selectAudioLanguage" data-mini="true"></select>
+                <div class="detailSection cinemaModeOptions" style="display:none;">
+                    <div class="detailSectionHeader">
+                        ${HeaderCinemaMode}
                     </div>
-                    <br />
-                    <div data-role="controlgroup">
-                        <input type="checkbox" id="chkPlayDefaultAudioTrack" />
-                        <label for="chkPlayDefaultAudioTrack">${LabelPlayDefaultAudioTrack}</label>
+                    <div class="detailSectionContent">
+                        <br />
+                        <div data-role="controlgroup">
+                            <input type="checkbox" id="chkEnableCinemaMode" />
+                            <label for="chkEnableCinemaMode">${LabelEnableCinemaMode}</label>
+                        </div>
+
+                        <div class="fieldDescription">${CinemaModeConfigurationHelp}</div>
                     </div>
-                    <br />
-                    <div>
-                        <label for="selectSubtitleLanguage">${LabelSubtitleLanguagePreference}</label>
-                        <select id="selectSubtitleLanguage" data-mini="true"></select>
-                    </div>
-                    <br />
-                    <div>
-                        <label for="selectSubtitlePlaybackMode">${LabelSubtitlePlaybackMode}</label>
-                        <select id="selectSubtitlePlaybackMode" data-mini="true">
-                            <option value="Default">${OptionDefaultSubtitles}</option>
-                            <option value="OnlyForced">${OptionOnlyForcedSubtitles}</option>
-                            <option value="Always">${OptionAlwaysPlaySubtitles}</option>
-                            <option value="None">${OptionNoSubtitles}</option>
-                        </select>
-                        <div class="fieldDescription subtitlesDefaultHelp subtitlesHelp" style="display: none;">${OptionDefaultSubtitlesHelp}</div>
-                        <div class="fieldDescription subtitlesAlwaysHelp subtitlesHelp" style="display: none;">${OptionAlwaysPlaySubtitlesHelp}</div>
-                        <div class="fieldDescription subtitlesOnlyForcedHelp subtitlesHelp" style="display: none;">${OptionOnlyForcedSubtitlesHelp}</div>
-                        <div class="fieldDescription subtitlesNoneHelp subtitlesHelp" style="display: none;">${OptionNoSubtitlesHelp}</div>
-                    </div>
+
                 </div>
 
-            </div>
-            <div class="detailSection cinemaModeOptions" style="display:none;">
-                <div class="detailSectionHeader">
-                    ${HeaderCinemaMode}
-                </div>
-                <div class="detailSectionContent">
-                    <br />
-                    <div data-role="controlgroup">
-                        <input type="checkbox" id="chkEnableCinemaMode" />
-                        <label for="chkEnableCinemaMode">${LabelEnableCinemaMode}</label>
-                    </div>
-
-                    <div class="fieldDescription">${CinemaModeConfigurationHelp}</div>
-                </div>
-
-            </div>
-
-            <ul data-role="listview" class="ulForm">
-                <li>
-                    <button type="submit" data-theme="a" data-icon="check" data-mini="true">
-                        ${ButtonOk}
-                    </button>
-                    <button type="button" onclick="history.back();" data-icon="delete" data-mini="true">
-                        ${ButtonCancel}
-                    </button>
-                </li>
-            </ul>
-        </form>
-        <script type="text/javascript">
-            $('.languagePreferencesForm').off('submit', LanguagePreferencesPage.onSubmit).on('submit', LanguagePreferencesPage.onSubmit);
-        </script>
+                <ul data-role="listview" class="ulForm">
+                    <li>
+                        <button type="submit" data-theme="a" data-icon="check">
+                            ${ButtonOk}
+                        </button>
+                        <button type="button" onclick="history.back();" data-icon="delete">
+                            ${ButtonCancel}
+                        </button>
+                    </li>
+                </ul>
+            </form>
+            <script type="text/javascript">
+                $('.languagePreferencesForm').off('submit', LanguagePreferencesPage.onSubmit).on('submit', LanguagePreferencesPage.onSubmit);
+            </script>
+        </div>
     </div>
 </body>
 </html>
