update card layouts

--- a/MediaBrowser.WebDashboard/dashboard-ui/connectlogin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/connectlogin.html
@@ -29,7 +29,7 @@
                     </span>
                     <i class="fa fa-check"></i>
                 </button>
-                <p class="forgotPassword" style="display:none;">
+                <p class="forgotPassword">
                     <a href="http://emby.media/community/index.php?app=core&module=global&section=lostpass" target="_blank">${ButtonForgotPassword}</a>
                 </p>
                 <div class="skip">
@@ -43,7 +43,7 @@
                     <div class="fieldDescription">${TextConnectToServerManually}</div>
                 </div>
 
-                <div class="newUsers" style="display:none;">
+                <div class="newUsers">
                     <br />
                     <h2 style="text-align: left;">${HeaderNewUsers}</h2>
                     <a data-role="button" data-icon="action" href="http://emby.media/community/index.php?app=core&module=global&section=register" target="_blank">${ButtonSignUp}</a>
