--- a/MediaBrowser.WebDashboard/dashboard-ui/favorites.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/favorites.html
@@ -10,7 +10,7 @@
             <a href="index.html">${TabHome}</a>
             <a href="homelatest.html" class="homeLatestTab">${TabLatest}</a>
             <a href="tvrecommended.html">${TabNextUp}</a>
-            <a href="favorites.html" class="ui-btn-active">${TabFavorites}</a>
+            <a href="favorites.html" class="ui-btn-active homeFavoritesTab">${TabFavorites}</a>
             <a href="tvupcoming.html">${TabUpcoming}</a>
         </div>
 
