--- a/MediaBrowser.WebDashboard/dashboard-ui/homelatest.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/homelatest.html
@@ -10,7 +10,7 @@
             <a href="index.html">${TabHome}</a>
             <a href="#" class="ui-btn-active">${TabLatest}</a>
             <a href="tvrecommended.html">${TabNextUp}</a>
-            <a href="favorites.html">${TabFavorites}</a>
+            <a href="favorites.html" class="homeFavoritesTab">${TabFavorites}</a>
             <a href="tvupcoming.html">${TabUpcoming}</a>
         </div>
 
