--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -10,7 +10,7 @@
             <div class="libraryViewNav scopedLibraryViewNav">
                 <a href="index.html" class="lnkHomeHome">${TabHome}</a>
                 <a href="homelatest.html" class="lnkHomeLatest homeLatestTab">${TabLatest}</a>
-                <a href="tvrecommended.html" class="lnkHomeNextUp">${TabNextUp}</a>
+                <a href="tvrecommended.html" class="lnkHomeNextUp homeFavoritesTab">${TabNextUp}</a>
                 <a href="favorites.html" class="lnkHomeFavorites">${TabFavorites}</a>
                 <a href="tvupcoming.html" class="lnkHomeUpcoming">${TabUpcoming}</a>
             </div>
