--- a/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
@@ -10,7 +10,7 @@
             <a href="index.html">${TabHome}</a>
             <a href="homelatest.html" class="homeLatestTab">${TabLatest}</a>
             <a href="#" class="ui-btn-active">${TabNextUp}</a>
-            <a href="favorites.html">${TabFavorites}</a>
+            <a href="favorites.html" class="homeFavoritesTab">${TabFavorites}</a>
             <a href="tvupcoming.html">${TabUpcoming}</a>
         </div>
         <div class="libraryViewNav scopedLibraryViewNav" style="display: none;">
