--- a/MediaBrowser.WebDashboard/dashboard-ui/tvupcoming.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvupcoming.html
@@ -9,7 +9,7 @@
             <a href="index.html">${TabHome}</a>
             <a href="homelatest.html" class="homeLatestTab">${TabLatest}</a>
             <a href="tvrecommended.html">${TabNextUp}</a>
-            <a href="favorites.html">${TabFavorites}</a>
+            <a href="favorites.html" class="homeFavoritesTab">${TabFavorites}</a>
             <a href="#" class="ui-btn-active">${TabUpcoming}</a>
         </div>
         <div class="libraryViewNav scopedLibraryViewNav" style="display: none;">
