--- a/MediaBrowser.WebDashboard/dashboard-ui/dashboardhosting.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dashboardhosting.html
@@ -4,7 +4,7 @@
     <title>${TitleAdvanced}</title>
 </head>
 <body>
-    <div id="dashboardHostingPage" data-role="page" class="page type-interior advancedConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Hosting%20Settings">
+    <div id="dashboardHostingPage" data-role="page" class="page type-interior advancedConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Hosting%20Settings" data-require="scripts/dashboardhosting">
 
         <div data-role="content">
             <div class="content-primary">
@@ -78,10 +78,6 @@
 
             </div>
         </div>
-
-        <script type="text/javascript">
-            $('.dashboardHostingForm').off('submit', DashboardHostingPage.onSubmit).on('submit', DashboardHostingPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
