support video_ts.nfo

--- a/MediaBrowser.WebDashboard/dashboard-ui/gamesystems.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/gamesystems.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="gamesystemsPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="gamesystem">
+    <div id="gamesystemsPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="gamesystem" data-require="scripts/gamesystemspage">
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="gamesrecommended.html">${TabSuggestions}</a>
             <a href="games.html">${TabGames}</a>
