--- a/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
@@ -26,20 +26,17 @@
         <div data-role="content">
             <div class="ehsContent">
 
-                <div class="scopedContent">
-                    <div id="resumableSection" style="display: none;">
-                        <div>
-                            <h1 class="listHeader firstListHeader" style="display:inline-block;vertical-align:middle;">${HeaderResume}</h1>
-                            <a href="#" class="accentButton categorySyncButton" data-category="Resume"><i class="fa fa-cloud"></i>${ButtonSync}</a>
-                        </div>
-
-                        <div id="resumableItems" class="itemsContainer">
-                        </div>
+                <div id="resumableSection" style="display: none;" class="scopedContent homePageSection">
+                    <div>
+                        <h1 class="listHeader firstListHeader" style="display:inline-block;vertical-align:middle;">${HeaderResume}</h1>
+                        <a href="#" class="accentButton categorySyncButton" data-category="Resume"><i class="fa fa-cloud"></i>${ButtonSync}</a>
                     </div>
 
+                    <div id="resumableItems" class="itemsContainer">
+                    </div>
                 </div>
-                
-                <div>
+
+                <div class="homePageSection">
                     <div>
                         <h1 class="listHeader nextUpHeader" style="display:inline-block;vertical-align:middle;">${HeaderNextUp}</h1>
                         <a href="#" class="accentButton categorySyncButton" data-category="NextUp"><i class="fa fa-cloud"></i>${ButtonSync}</a>
