--- a/MediaBrowser.WebDashboard/dashboard-ui/device.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/device.html
@@ -4,7 +4,7 @@
     <title>${TitleDevices}</title>
 </head>
 <body>
-    <div id="devicePage" data-role="page" class="page type-interior devicesPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Devices">
+    <div id="devicePage" data-role="page" class="page type-interior devicesPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Devices" data-require="scripts/device">
 
         <div data-role="content">
             <div class="content-primary">
@@ -54,9 +54,6 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript">
-            $('.deviceForm').off('submit', DevicePage.onSubmit).on('submit', DevicePage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
