--- a/MediaBrowser.WebDashboard/dashboard-ui/episodes.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/episodes.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="episodesPage" data-role="page" class="page libraryPage">
+    <div id="episodesPage" data-role="page" class="page libraryPage" data-require="scripts/episodes">
 
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="tvrecommended.html">${TabSuggestions}</a>
