--- a/MediaBrowser.WebDashboard/dashboard-ui/gamesrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/gamesrecommended.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="gamesRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="game">
+    <div id="gamesRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="game" data-require="scripts/gamesrecommendedpage">
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="#" class="ui-btn-active">${TabSuggestions}</a>
             <a href="games.html">${TabGames}</a>
