--- a/MediaBrowser.WebDashboard/dashboard-ui/tvpeople.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvpeople.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="tvPeoplePage" data-role="page" class="page libraryPage">
+    <div id="tvPeoplePage" data-role="page" class="page libraryPage" data-require="scripts/tvpeople">
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="tvrecommended.html">${TabSuggestions}</a>
             <a href="tvlatest.html">${TabLatest}</a>
