--- a/MediaBrowser.WebDashboard/dashboard-ui/tvstudios.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvstudios.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="tvStudiosPage" data-role="page" class="page libraryPage">
+    <div id="tvStudiosPage" data-role="page" class="page libraryPage" data-require="scripts/tvstudios">
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="tvrecommended.html">${TabSuggestions}</a>
             <a href="tvlatest.html">${TabLatest}</a>
