--- a/MediaBrowser.WebDashboard/dashboard-ui/tvupcoming.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvupcoming.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="tvUpcomingPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="series">
+    <div id="tvUpcomingPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="series" data-require="scripts/tvupcoming">
         <div class="libraryViewNav globalNav" style="display: none;">
             <a href="index.html">${TabHome}</a>
             <a href="homelatest.html" class="homeLatestTab">${TabLatest}</a>
