--- a/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="tvRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="series">
+    <div id="tvRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="series" data-require="scripts/tvrecommended">
 
         <div class="libraryViewNav globalNav" style="display: none;">
             <a href="index.html">${TabHome}</a>
