lazy load scripts

--- a/MediaBrowser.WebDashboard/dashboard-ui/musicalbumartists.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/musicalbumartists.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="musicAlbumArtistsPage" data-role="page" class="page libraryPage">
+    <div id="musicAlbumArtistsPage" data-role="page" class="page libraryPage" data-require="scripts/musicalbumartists">
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="musicrecommended.html">${TabSuggestions}</a>
             <a href="songs.html" class="musicSongsTab">${TabSongs}</a>
