--- a/MediaBrowser.WebDashboard/dashboard-ui/musicrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/musicrecommended.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="musicRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="musicartist">
+    <div id="musicRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="musicartist" data-require="scripts/musicrecommended">
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="#" class="ui-btn-active">${TabSuggestions}</a>
             <a href="songs.html" class="musicSongsTab">${TabSongs}</a>
@@ -16,7 +16,7 @@
         </div>
         <div data-role="content">
             <div class="ehsContent squareEhsContent">
-                
+
                 <div class="homePageSection">
                     <h1 class="listHeader">${HeaderLatestMusic}</h1>
 
