--- a/MediaBrowser.WebDashboard/dashboard-ui/plugincatalog.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/plugincatalog.html
@@ -26,7 +26,7 @@
                             <label for="radopTheater">${PluginTabAppTheater}</label>
                         </fieldset>
                     </div>
-                    <div style="display:inline-block;vertical-align:bottom;">
+                    <div style="display:inline-block;vertical-align:bottom;" class="optionAdultContainer">
                         <div style="margin-left:1em;">
                             <label for="chkAdult">${OptionDisplayAdultContent}</label>
                             <input id="chkAdult" type="checkbox" data-mini="true" data-inline="true" />
