--- a/MediaBrowser.WebDashboard/dashboard-ui/about.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/about.html
@@ -4,7 +4,7 @@
     <title>${TitleSupport}</title>
 </head>
 <body>
-    <div id="aboutPage" data-role="page" class="page type-interior">
+    <div id="aboutPage" data-role="page" class="page type-interior" data-require="scripts/aboutpage">
 
         <div data-role="content">
             <div class="content-primary">
