--- a/MediaBrowser.WebDashboard/dashboard-ui/channels.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/channels.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="channelsPage" data-role="page" class="page libraryPage channelsPage" data-contextname="${HeaderChannels}">
+    <div id="channelsPage" data-role="page" class="page libraryPage channelsPage" data-contextname="${HeaderChannels}" data-require="scripts/channels">
 
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="channelslatest.html" class="latestChannelItemsTab">${TabLatest}</a>
