--- a/MediaBrowser.WebDashboard/dashboard-ui/moviesrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/moviesrecommended.html
@@ -18,7 +18,7 @@
         <div data-role="content">
 
             <div class="ehsContent">
-                <div id="resumableSection" style="display: none;">
+                <div id="resumableSection" style="display: none;" class="homePageSection">
                     <div>
                         <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderResume}</h1>
                         <a href="#" class="accentButton categorySyncButton" data-category="Resume"><i class="fa fa-cloud"></i>${ButtonSync}</a>
@@ -28,15 +28,17 @@
                     </div>
                 </div>
 
-                <div>
-                    <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderLatestMovies}</h1>
-                    <a href="#" class="accentButton categorySyncButton" data-category="Latest"><i class="fa fa-cloud"></i>${ButtonSync}</a>
+                <div class="homePageSection">
+                    <div>
+                        <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderLatestMovies}</h1>
+                        <a href="#" class="accentButton categorySyncButton" data-category="Latest"><i class="fa fa-cloud"></i>${ButtonSync}</a>
+                    </div>
+
+                    <div id="recentlyAddedItems" class="itemsContainer">
+                    </div>
                 </div>
 
-                <div id="recentlyAddedItems" class="itemsContainer">
-                </div>
-
-                <div class="recommendations">
+                <div class="recommendations homePageSection">
                 </div>
                 <div class="noItemsMessage" style="display: none;">
                     <br />
