--- a/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
@@ -27,7 +27,7 @@
                         <p class="planSummary"></p>
                     </div>
 
-                    <form style="margin-top:1.5em;" name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" id="payPalSupporterForm" method="post">
+                    <form style="margin-top:1.5em;" name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" class="supporterForm" method="post">
 
                         <fieldset data-role="controlgroup">
                             <legend>${HeaderDonationType}</legend>
@@ -52,13 +52,6 @@
                                     <span class="monthlyAmount"></span>
                                 </label>
                             </div>
-                            <!--<div class="fldDaily">
-                                <input type="radio" class="radioDonationType" name="radioDonationType" id="radioDailySupporter" value="daily">
-                                <label for="radioDailySupporter">
-                                    Daily supporter membership<br />
-                                    <span class="dailyAmount"></span>
-                                </label>
-                            </div>-->
                         </fieldset>
                         <div class="fieldDescription">${LabelRecurringDonationCanBeCancelledHelp}</div>
 
@@ -90,17 +83,21 @@
 
                         <br />
 
+                        <!--CORDOVA_EXCLUDE_START-->
                         <input type="hidden" name="cmd" id="ppCmd" value="_xclick">
                         <input type="hidden" name="business" value="donation@mediabrowser.tv">
                         <input type="hidden" name="currency_code" value="USD">
                         <input type="hidden" name="item_name" value="Emby Supporter">
                         <input type="hidden" name="item_number" id="ppItemNo" value="MBSupporter">
                         <input type="hidden" name="notify_url" value="http://mb3admin.com/admin/service/services/ppipn.php">
-                        <input type="hidden" name="return" id="paypalReturnUrl" value="#">
+                        <input type="hidden" name="return" id="returnUrl" value="#">
+                        <!--CORDOVA_EXCLUDE_END-->
 
                         <button type="submit" data-role="none" class="btn" style="background-color:#179BD7">
+                            <!--CORDOVA_REPLACE_SUPPORTER_SUBMIT_START-->
                             <i class="fa fa-paypal"></i>
                             <span>${ButtonDonateWithPayPal}</span>
+                            <!--CORDOVA_REPLACE_SUPPORTER_SUBMIT_END-->
                         </button>
 
                         <input type="hidden" id="donateAmt" name="amount" />
@@ -118,7 +115,7 @@
         </div>
 
         <script type="text/javascript">
-            $('#payPalSupporterForm').off('submit', SupporterPage.onSubmit).on('submit', SupporterPage.onSubmit);
+            $('.supporterForm').off('submit', SupporterPage.onSubmit).on('submit', SupporterPage.onSubmit);
         </script>
     </div>
 </body>
