lazy load scripts

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvitems.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvitems.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="liveTvItemsPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}">
+    <div id="liveTvItemsPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvitems,scripts/queryfilters">
         <div class="libraryViewNav">
             <a href="livetvsuggested.html" class="ui-btn-active">${TabSuggestions}</a>
             <a href="livetvguide.html">${TabGuide}</a>
