--- a/MediaBrowser.WebDashboard/dashboard-ui/moviegenres.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/moviegenres.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="movieGenresPage" data-role="page" class="page libraryPage">
+    <div id="movieGenresPage" data-role="page" class="page libraryPage" data-require="scripts/moviegenres">
 
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="moviesrecommended.html">${TabSuggestions}</a>
