--- a/MediaBrowser.WebDashboard/dashboard-ui/moviepeople.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/moviepeople.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="moviePeoplePage" data-role="page" class="page libraryPage">
+    <div id="moviePeoplePage" data-role="page" class="page libraryPage" data-require="scripts/moviepeople">
 
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="moviesrecommended.html">${TabSuggestions}</a>
