--- a/MediaBrowser.WebDashboard/dashboard-ui/musicartists.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/musicartists.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="musicArtistsPage" data-role="page" class="page libraryPage" data-require="scripts/musicartists">
+    <div id="musicArtistsPage" data-role="page" class="page libraryPage" data-require="scripts/musicartists,scripts/queryfilters">
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="musicrecommended.html">${TabSuggestions}</a>
             <a href="songs.html" class="musicSongsTab">${TabSongs}</a>
