--- a/MediaBrowser.WebDashboard/dashboard-ui/photos.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/photos.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="photosPage" data-role="page" class="page libraryPage">
+    <div id="photosPage" data-role="page" class="page libraryPage" data-require="scripts/photos,scripts/queryfilters">
 
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="photos.html" class="ui-btn-active lnkPhotoAlbums">${TabAlbums}</a>
