--- a/MediaBrowser.WebDashboard/dashboard-ui/collections.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/collections.html
@@ -50,8 +50,10 @@
                         <label for="selectView">${LabelView}</label>
                         <select id="selectView">
                             <option value="Poster">${OptionPoster}</option>
+                            <option value="PosterCard">${OptionPosterCard}</option>
                             <option value="List">${OptionList}</option>
                             <option value="Thumb">${OptionThumb}</option>
+                            <option value="ThumbCard">${OptionThumbCard}</option>
                        </select>
                     </div>
                     <br />
