--- a/MediaBrowser.WebDashboard/dashboard-ui/musicvideos.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/musicvideos.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="musicVideosPage" data-role="page" class="page libraryPage" data-require="scripts/musicvideos">
+    <div id="musicVideosPage" data-role="page" class="page libraryPage" data-require="scripts/musicvideos,scripts/queryfilters">
 
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="musicrecommended.html">${TabSuggestions}</a>
