--- a/MediaBrowser.WebDashboard/dashboard-ui/songs.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/songs.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="songsPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="musicartist">
+    <div id="songsPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="musicartist" data-require="scripts/songs,scripts/queryfilters">
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="musicrecommended.html">${TabSuggestions}</a>
             <a href="#" class="ui-btn-active">${TabSongs}</a>
