--- a/MediaBrowser.WebDashboard/dashboard-ui/tvshows.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvshows.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="tvShowsPage" data-role="page" class="page libraryPage">
+    <div id="tvShowsPage" data-role="page" class="page libraryPage" data-require="scripts/tvshows,scripts/queryfilters">
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="tvrecommended.html">${TabSuggestions}</a>
             <a href="tvlatest.html">${TabLatest}</a>
